--- a/main.Rmd
+++ b/main.Rmd
@@ -79,7 +79,7 @@ p_cal_elec <- elec %>%
   frame_calendar(x = time, y = kwh, date = date, nrow = 1) %>% 
     ggplot(aes(x = .time, y = .kwh, group = date)) +
     geom_line(aes(colour = as.factor(id)), size = 0.5) +
-    scale_colour_brewer(name = "", palette = "PiYG", direction = -1) +
+    scale_colour_brewer(name = "", palette = "Dark2", direction = 1) +
     facet_grid(id ~ ., labeller = label_both) +
     theme(legend.position = "bottom")
 prettify(p_cal_elec, size = 2.5, label.padding = unit(0.1, "lines"))
@@ -428,6 +428,76 @@ The various designs are selected by increasing the mean/rate/shape of these dist
 <!-- Table -->
 <!-- Conclusions -->
 <!-- (in power) -->
+
+## Data Shuffling method
+
+
+<!-- ```{r} -->
+<!-- raw_data = rnorm(12, 5, 10) %>%  -->
+<!--   as_tibble() %>%  -->
+<!--   mutate(nfacet = rep(1:4, each = 3), -->
+<!--          nx = rep(1:3, 4)) -->
+
+<!-- raw_data %>% group_by(nfacet, nx) %>% nest() -->
+
+<!-- raw_data2 = raw_data %>% pivot_wider(id_cols = 2, names_from = "nx", values_from = "value") -->
+
+<!-- ``` -->
+
+<!--  ### Original -->
+<!-- | facets/x-axis     	| A_1  	| A_2  	| A_3  	| .. 	| .. 	| A_m  	| -->
+<!-- |-----	|------	|------	|------	|----	|----	|------	| -->
+<!-- | B_1 	| x_1 	| x_2 	| x_3 	| .. 	| .. 	| x_n 	| -->
+<!-- | B_2 	| y_1 	| y_2 	| y_3 	| .. 	| .. 	| y_n 	| -->
+<!-- | B_3 	|      	|      	|      	|    	|    	|      	| -->
+<!-- | ..  	|      	|      	|      	|    	|    	|      	| -->
+<!-- | ..  	|      	|      	|      	|    	|    	|      	| -->
+<!-- | B_L 	| z_1 	| z_2 	| z_3 	| .. 	| .. 	| z_m 	| -->
+
+<!-- ### Step1 -->
+
+<!-- | facets/x-axis     	| A_1  	| A_2  	| A_3  	| .. 	| .. 	| A_m  	| -->
+<!-- |-----	|------	|------	|------	|----	|----	|------	| -->
+<!-- | B_1 	| x_1 	| x_2 	| x_3 	| .. 	| .. 	| x_n 	| -->
+<!-- | B_2 	| y_1 	| y_2 	| y_3 	| .. 	| .. 	| y_n 	| -->
+<!-- | B_3 	|      	|      	|      	|    	|    	|      	| -->
+<!-- | ..  	|      	|      	|      	|    	|    	|      	| -->
+<!-- | ..  	|      	|      	|      	|    	|    	|      	| -->
+<!-- | B_L 	| z_1 	| z_2 	| z_3 	| .. 	| .. 	| z_m 	| -->
+
+The mean and sd needs to be computed by permuting the data repeatedly. These permutations could be done in several ways given the design.
+
+### Method 1:
+
+All data is repeatedly shuffled $nperm$ times in random manner to obtain the measure $m = median_{facets}(max_{x}dist)$. Then the normalised $m$ is obtained by scaling the observed value by the mean and sd of all $m$ obtained from the permutated data.
+
+### Method 2:
+
+$m' = max_{x}dist$ is obtained for each facet.
+All $x$ levels are shuffled for each facet to obtain several $m'$s. Hence $m'$ is normalized for each facet level and the facets are aggregated using $m''= median(m')$, which is basically median(norm(max)). We need to normalise this median across facets as well. So we shuffle all facets for each $x$ level and obtain several $m''$s. In this approach, data is shuffled $2*nperm$ times and hence distances are computed $2*nperm$ times. It is computationally very intensive.
+
+Hence, it was decided that the first approach will be employed to implement normalisation. One of the advantages of the second method could be to have normalisation separately for max and median measure. There is nothing that is stopping the users to implement this with more efficient computing power. 
+
+```{r}
+# design_time <- readr::read_rds("../hakear-drake/data/design_time.rds")
+# write_rds(design_time, "data/design_time.rds")
+time_data <-readr::read_rds("data/design_time.rds")
+time_data$design = 
+  factor(time_data$design,
+         levels = c("null","vary_f", "vary_x", "vary_all"))
+
+time_data %>% 
+  pivot_longer(cols = c(time_obs, time_dist),
+               names_to = "type",
+               values_to = "time") %>% 
+  dplyr::filter(distribution == "normal") %>% 
+  ggplot(aes(x= design, 
+             y = log(time, exp(1)), 
+             colour = type, group = nfacet)) + geom_point() + geom_line(aes(group = type)) +
+  facet_grid(nx~nfacet) + ylab("ln(time)")
+
+
+```
 
 
 ## Results 
